change solution frame

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -747,9 +747,9 @@ endif()
 if(ANDROID)
     add_subdirectory(${EXTERNAL}/libsdl2/tnt)
     add_subdirectory(${EXTERNAL}/libassimp/tnt)
-	add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/apps/nativeapps/android)
-    add_subdirectory(${LIBRARIES}/filamentapp)
-    #add_subdirectory(${LIBRARIES}/resources)
+	add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/apps/android/gamedriver)
+    add_subdirectory(${LIBRARIES}/gamedriver)
+    add_subdirectory(${LIBRARIES}/resources)
 endif()
 
 # Generate exported executables for cross-compiled builds (Android, WebGL, and iOS)
