--- a/apps/android/launcher/app/src/main/AndroidManifest.xml
+++ b/apps/android/launcher/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:allowBackup="true"
         android:supportsRtl="true"
         android:largeHeap="true"
-        android:theme="@style/AppTheme">
+        android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
 
 
         <activity android:name="org.libsdl.app.SDLActivity"
