--- a/libs/filagui/CMakeLists.txt
+++ b/libs/filagui/CMakeLists.txt
@@ -43,7 +43,7 @@ foreach (mat_src ${MATERIAL_SRCS})
             OUTPUT ${output_path}
             COMMAND matc ${MATC_BASE_FLAGS} -o ${output_path} ${fullname}
             DEPENDS ${mat_src} matc
-            COMMENT "Compiling material ${mat_src} to ${output_path}"
+            COMMENT "Compiling material [${MATC_BASE_FLAGS}] ${mat_src} to ${output_path}"
     )
     list(APPEND RESOURCE_BINS ${output_path})
 endforeach()
