--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -701,13 +701,13 @@ set_target_properties(sdl_headers_copy PROPERTIES FOLDER ThirdParty/libsdl2)
 
 #引入Roblox Luau
 add_subdirectory(${EXTERNAL}/luau)
-set_target_properties(Luau.Common PROPERTIES FOLDER ThirdParty/luau)
-set_target_properties(Luau.Ast PROPERTIES FOLDER ThirdParty/luau)
+set_target_properties(Luau.Common   PROPERTIES FOLDER ThirdParty/luau)
+set_target_properties(Luau.Ast      PROPERTIES FOLDER ThirdParty/luau)
 set_target_properties(Luau.Compiler PROPERTIES FOLDER ThirdParty/luau)
 set_target_properties(Luau.Analysis PROPERTIES FOLDER ThirdParty/luau)
-#set_target_properties(Luau.CodeGen PROPERTIES FOLDER ThirdParty/luau)
-set_target_properties(Luau.VM PROPERTIES FOLDER ThirdParty/luau)
-set_target_properties(isocline PROPERTIES FOLDER ThirdParty/luau)
+set_target_properties(Luau.CodeGen  PROPERTIES FOLDER ThirdParty/luau)
+set_target_properties(Luau.VM       PROPERTIES FOLDER ThirdParty/luau)
+set_target_properties(isocline      PROPERTIES FOLDER ThirdParty/luau)
 
 #set_target_properties(Luau.Repl.CLI PROPERTIES FOLDER Tools/luau)
 #set_target_properties(Luau.Analyze.CLI PROPERTIES FOLDER Tools/luau)
@@ -718,8 +718,8 @@ if (FILAMENT_BUILD_FILAMAT OR IS_HOST_PLATFORM)
     # spirv-tools must come before filamat, as filamat relies on the presence of the
     # spirv-tools_SOURCE_DIR variable.
     add_subdirectory(${EXTERNAL}/spirv-tools)
+    add_subdirectory(${EXTERNAL}/spirv-cross/tnt)
     add_subdirectory(${EXTERNAL}/glslang/tnt)
-    add_subdirectory(${EXTERNAL}/spirv-cross)
     add_subdirectory(${LIBRARIES}/filamat)
 
     # the material debugger requires filamat
