--- a/libs/resources/CMakeLists.txt
+++ b/libs/resources/CMakeLists.txt
@@ -64,24 +64,24 @@ file(MAKE_DIRECTORY ${RESOURCE_DIR})
 
 get_resgen_vars(${RESOURCE_DIR} resources)
 
-add_custom_command(
-        OUTPUT ${RESGEN_OUTPUTS}
-        COMMAND resgen ${RESGEN_FLAGS} ${RESOURCE_BINS}
-        DEPENDS resgen ${RESOURCE_BINS}
-        COMMENT "Aggregating resources"
-)
-
-if (DEFINED RESGEN_SOURCE_FLAGS)
-    set_source_files_properties(${RESGEN_SOURCE} PROPERTIES COMPILE_FLAGS ${RESGEN_SOURCE_FLAGS})
-endif()
-
-# CMake fails to invoke ar on Windows unless there is at least one C/C++ file in the library.
-set(DUMMY_SRC "${RESOURCE_DIR}/dummy.c")
-add_custom_command(OUTPUT ${DUMMY_SRC} COMMAND echo "//" > ${DUMMY_SRC})
-
-add_library(embed-resources ${DUMMY_SRC} ${RESGEN_SOURCE})
-set_target_properties(embed-resources PROPERTIES FOLDER Libs/Resources)
-target_include_directories(embed-resources PUBLIC ${GENERATION_ROOT})
+#add_custom_command(
+#        OUTPUT ${RESGEN_OUTPUTS}
+#        COMMAND resgen ${RESGEN_FLAGS} ${RESOURCE_BINS}
+#        DEPENDS resgen ${RESOURCE_BINS}
+#        COMMENT "Aggregating resources"
+#)
+#
+#if (DEFINED RESGEN_SOURCE_FLAGS)
+#    set_source_files_properties(${RESGEN_SOURCE} PROPERTIES COMPILE_FLAGS ${RESGEN_SOURCE_FLAGS})
+#endif()
+#
+## CMake fails to invoke ar on Windows unless there is at least one C/C++ file in the library.
+#set(DUMMY_SRC "${RESOURCE_DIR}/dummy.c")
+#add_custom_command(OUTPUT ${DUMMY_SRC} COMMAND echo "//" > ${DUMMY_SRC})
+#
+#add_library(embed-resources ${DUMMY_SRC} ${RESGEN_SOURCE})
+#set_target_properties(embed-resources PROPERTIES FOLDER Libs/Resources)
+#target_include_directories(embed-resources PUBLIC ${GENERATION_ROOT})
 # ==================================================================================================
 # Invoke cmgen to build KTX files for the default IBL and skybox
 # ==================================================================================================
@@ -177,28 +177,28 @@ set_target_properties(suzanne-resources PROPERTIES FOLDER Libs/Resources)
 # Resources for gltf_viewer and gltf_instances
 # ==================================================================================================
 
-add_library(gltf-demo-resources ${DUMMY_SRC})
-set_target_properties(gltf-demo-resources PROPERTIES FOLDER Libs/Resources)
-
-set(GLTF_DEMO_RESOURCES
-        ${ROOT_DIR}/third_party/models/DamagedHelmet/DamagedHelmet.glb
-        ${MATERIAL_DIR}/groundShadow.filamat
-        ${MATERIAL_DIR}/overdraw.filamat
-        )
-
-get_resgen_vars(${RESOURCE_DIR} gltf_demo)
-
-add_custom_command(
-        OUTPUT ${RESGEN_OUTPUTS}
-        COMMAND resgen ${RESGEN_FLAGS} ${GLTF_DEMO_RESOURCES}
-        DEPENDS resgen ${GLTF_DEMO_RESOURCES}
-)
-
-if (DEFINED RESGEN_SOURCE_FLAGS)
-    set_source_files_properties(${RESGEN_SOURCE} PROPERTIES COMPILE_FLAGS ${RESGEN_SOURCE_FLAGS})
-endif()
-
-target_sources(gltf-demo-resources PRIVATE ${RESGEN_SOURCE})
+#add_library(gltf-demo-resources ${DUMMY_SRC})
+#set_target_properties(gltf-demo-resources PROPERTIES FOLDER Libs/Resources)
+#
+#set(GLTF_DEMO_RESOURCES
+#        ${ROOT_DIR}/third_party/models/DamagedHelmet/DamagedHelmet.glb
+#        ${MATERIAL_DIR}/groundShadow.filamat
+#        ${MATERIAL_DIR}/overdraw.filamat
+#        )
+#
+#get_resgen_vars(${RESOURCE_DIR} gltf_demo)
+#
+#add_custom_command(
+#        OUTPUT ${RESGEN_OUTPUTS}
+#        COMMAND resgen ${RESGEN_FLAGS} ${GLTF_DEMO_RESOURCES}
+#        DEPENDS resgen ${GLTF_DEMO_RESOURCES}
+#)
+#
+#if (DEFINED RESGEN_SOURCE_FLAGS)
+#    set_source_files_properties(${RESGEN_SOURCE} PROPERTIES COMPILE_FLAGS ${RESGEN_SOURCE_FLAGS})
+#endif()
+#
+#target_sources(gltf-demo-resources PRIVATE ${RESGEN_SOURCE})
 
 # ==================================================================================================
 # Compiler flags
