make sure macos build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -787,7 +787,9 @@ add_subdirectory(${LIBRARIES}/gamedriver)
 if(ANDROID)
 	add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/apps/android/gamedriver)
 elseif(WIN32)
-	add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/apps/windows/launcher)
+	add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/apps/launcher)
+elseif(APPLE)
+	add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/apps/launcher)
 endif()
 
 # Generate exported executables for cross-compiled builds (Android, WebGL, and iOS)
