--- a/libs/gamedriver/CMakeLists.txt
+++ b/libs/gamedriver/CMakeLists.txt
@@ -66,6 +66,7 @@ set(LIBS
         viewer
         uberarchive
         SDL2-static
+        SDL2main
         Luau.Compiler
         Luau.VM
         rapidxml
