--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -162,8 +162,9 @@ if (ANDROID)
     add_definitions(-D__ANDROID_UNAVAILABLE_SYMBOLS_ARE_WEAK__)
 endif()
 
+set(IS_HOST_PLATFORM FALSE)
 if (NOT ANDROID AND NOT WEBGL AND NOT IOS AND NOT FILAMENT_LINUX_IS_MOBILE)
-    set(IS_HOST_PLATFORM TRUE)
+    set(IS_HOST_PLATFORM TRUE)    
 endif()
 
 if (IOS)
